--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "kyrieLei/kyrieLei.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : jingdi.png"
   name             : "Jingdi Lei"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
@@ -38,7 +38,7 @@ author:
   
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
